--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am satyam kumar, currently working as a visiting researcher on adaptive riemannian classifiers for EEG signals in POTIOC team at INRIA, Bordeaux sud-ouest under supervision of <a href="https://scholar.google.com/citations?user=bF8vZlQAAAAJ&amp;hl=en" target="_blank">Fabien Lotte</a>.
+<p>I am Satyam Kumar, currently working as a visiting researcher on adaptive Riemannian classifiers for EEG signals in POTIOC team at INRIA, Bordeaux under the supervision of <a href="https://scholar.google.com/citations?user=bF8vZlQAAAAJ&amp;hl=en" target="_blank">Fabien Lotte</a>.
 My interest is to decode the information content of neural signals and further its use in Brain-computer interfaces (BCI). I worked under supervison of <a href="https://scholar.google.com/citations?user=QWTcyP8AAAAJ&amp;hl=en" target="_blank">Prof. Laxmidhar Behera</a> for my master&rsquo;s <a href="https://drive.google.com/file/d/1pHmX1TsNZNjwv38igwxPkJ8qyHXZ1z3W/view?usp=sharing" target="_blank">thesis</a> on Motor Imagery BCI. In summer 2016, I was fortunate enough to receive <a href="http://www.inde.campusfrance.org/en/page/charpak-research-internship-program" target="_blank">Charpak Scholarship</a> for research internship under <a href="https://scholar.google.com/citations?user=szBc-d8AAAAJ&amp;hl=en" target="_blank">Prof. Francesco P. Andriulli</a> at Telecom Bretagne, France. During My master&rsquo;s thesis, I visited the <a href="http://www.relab.ethz.ch/" target="_blank">Rehabilitation Engineering Laboratory</a> at ETH Zurich and worked with Mr. Oliver Bichsel under the supervision of <a href="https://scholar.google.com/citations?user=AxZIIccAAAAJ&amp;hl=en" target="_blank">Prof. Roger Gassert</a>. Currently, I am remotely supervising undergraduate students of <a href="http://www.iitk.ac.in/" target="_blank">IIT Kanpur</a> on transfer learning and online BCIs.</p>
 
-<p>Apart from my academic endeavors, I am a potterhead and love to play soccer as central defensive midfielder.</p>
+<p>Apart from my academic endeavors, I am a Potterhead and love to play soccer as a central defensive midfielder.</p>
 </small> </div>
 
     <div class="row">
