--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ My interest is to decode the information content of neural signals and further i
 
   <div class="pub-publication">
     
-    Submitted to IEEE Transactions on Emerging topics in Computational Intelligence
+    Accepted for publication in Special issue on New Advances in Deep-Transfer Learning, IEEE Transactions on Emerging topics in Computational Intelligence
         
   </div>
 
