--- a/publication/index.html
+++ b/publication/index.html
@@ -255,7 +255,7 @@
   <span itemprop="author">
     Tharun Kumar Reddy, Vipul Arora, <strong>Satyam Kumar</strong>, Laxmidhar Behera, Yu kai Wang, Chin Teng Lin</span>.
   <a href="/publication/tetci/" itemprop="name">Electroencephalogram based reaction time prediction with Differential Phase Synchrony representations using co-operative multitask learning Deep Neural Networks</a>.
-  Submitted to IEEE Transactions on Emerging topics in Computational Intelligence,
+  Accepted for publication in Special issue on New Advances in Deep-Transfer Learning, IEEE Transactions on Emerging topics in Computational Intelligence,
   2018.
   <p>
 
