--- a/publication/tetci/index.html
+++ b/publication/tetci/index.html
@@ -282,7 +282,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">Submitted to IEEE Transactions on Emerging topics in Computational Intelligence</div>
+          <div class="col-xs-12 col-sm-9">Accepted for publication in Special issue on New Advances in Deep-Transfer Learning, IEEE Transactions on Emerging topics in Computational Intelligence</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
