--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -213,6 +213,13 @@
     </div>
   </div>
   
+  <div>
+    <h2><a href="/publication/winbci/">Towards Adaptive Classification using Riemannian Geometry approaches in Brain-Computer Interfaces</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
 
   
 
