--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="Research Assistant">
+  <meta name="description" content="">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -87,7 +87,7 @@
   <meta property="og:site_name" content="Satyam ">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Satyam ">
-  <meta property="og:description" content="Research Assistant">
+  <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
   
