--- a/publication/index.html
+++ b/publication/index.html
@@ -288,18 +288,14 @@
             <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
-    <strong>Satyam Kumar</strong>, Tharun Kumar Reddy, Laxmidhar Behera</span>.
-  <a href="/publication/tbme/" itemprop="name">Divergence Framework for Multiclass Motor Imagery Brain Computer Interface</a>.
-  Arxiv,
+    <strong>Satyam Kumar</strong>, Tharun Kumar Reddy, Vipul Arora, Laxmidhar Behera</span>.
+  <a href="/publication/tbme/" itemprop="name">Formulating Divergence Framework For Multiclass Motor Imagery Brain Computer Interface</a>.
+  IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2020),
   2018.
   <p>
 
 
 
-
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1901.07457.pdf" target="_blank" rel="noopener">
-  PDF
-</a>
 
 
 
