--- a/publication_types/3/index.html
+++ b/publication_types/3/index.html
@@ -188,7 +188,7 @@
   
   
   <div>
-    <h2><a href="/publication/tbme/">Divergence Framework for Multiclass Motor Imagery Brain Computer Interface</a></h2>
+    <h2><a href="/publication/tbme/">Formulating Divergence Framework For Multiclass Motor Imagery Brain Computer Interface</a></h2>
     <div class="article-style">
       
     </div>
