--- a/404.html
+++ b/404.html
@@ -190,7 +190,7 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/tbme/">Divergence Framework for Multiclass Motor Imagery Brain Computer Interface</a></li>
+    <li><a href="/publication/tbme/">Formulating Divergence Framework For Multiclass Motor Imagery Brain Computer Interface</a></li>
   </ul>
   
   <ul>
