--- a/publication/tbme/index.html
+++ b/publication/tbme/index.html
@@ -88,7 +88,7 @@
   
   <meta property="og:site_name" content="Satyam ">
   <meta property="og:url" content="/publication/tbme/">
-  <meta property="og:title" content="Divergence Framework for Multiclass Motor Imagery Brain Computer Interface | Satyam ">
+  <meta property="og:title" content="Formulating Divergence Framework For Multiclass Motor Imagery Brain Computer Interface | Satyam ">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -101,7 +101,7 @@
 
   
 
-  <title>Divergence Framework for Multiclass Motor Imagery Brain Computer Interface | Satyam </title>
+  <title>Formulating Divergence Framework For Multiclass Motor Imagery Brain Computer Interface | Satyam </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -183,10 +183,10 @@
 
 
   <div class="article-container">
-    <h1 itemprop="name">Divergence Framework for Multiclass Motor Imagery Brain Computer Interface</h1>
+    <h1 itemprop="name">Formulating Divergence Framework For Multiclass Motor Imagery Brain Computer Interface</h1>
     <span class="pub-authors" itemprop="author">
       
-      <strong>Satyam Kumar</strong>, Tharun Kumar Reddy, Laxmidhar Behera
+      <strong>Satyam Kumar</strong>, Tharun Kumar Reddy, Vipul Arora, Laxmidhar Behera
       
     </span>
     <span class="pull-right">
@@ -195,7 +195,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Divergence%20Framework%20for%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface&amp;url=%2fpublication%2ftbme%2f"
+         href="https://twitter.com/intent/tweet?text=Formulating%20Divergence%20Framework%20For%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface&amp;url=%2fpublication%2ftbme%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -209,21 +209,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2ftbme%2f&amp;title=Divergence%20Framework%20for%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2ftbme%2f&amp;title=Formulating%20Divergence%20Framework%20For%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fpublication%2ftbme%2f&amp;title=Divergence%20Framework%20for%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2ftbme%2f&amp;title=Formulating%20Divergence%20Framework%20For%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Divergence%20Framework%20for%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface&amp;body=%2fpublication%2ftbme%2f">
+         href="mailto:?subject=Formulating%20Divergence%20Framework%20For%20Multiclass%20Motor%20Imagery%20Brain%20Computer%20Interface&amp;body=%2fpublication%2ftbme%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -263,7 +263,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">Arxiv</div>
+          <div class="col-xs-12 col-sm-9">IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2020)</div>
         </div>
       </div>
       <div class="col-sm-1"></div>
@@ -296,10 +296,6 @@
 
 
 
-
-<a class="btn btn-primary btn-outline" href="https://arxiv.org/pdf/1901.07457.pdf" target="_blank" rel="noopener">
-  PDF
-</a>
 
 
 
